# design-patterns

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.cc  run.sh
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml
AbstractFactory/: AbstractFactory.cc  AbstractFactory.hpp  AbstractFactory.md  CMakeLists.txt
Adapter/: Adapter.cc  Adapter.hpp  AdapterPattern.md  CMakeLists.txt
Command/: CommandPattern.md
Decorator/: CMakeLists.txt  Decorator.cc  Decorator.hpp  DecoratorPattern.md
Factory/: CMakeLists.txt  Factory.cc  Factory.hpp  FactoryPattern.md
Observer/: CMakeLists.txt  Observer.cc  Observer.hpp  ObserverPattern.md
Proxy/: CMakeLists.txt  Proxy.cc  Proxy.hpp  ProxyPattern.md
Singleton/: SingletonPattern.md
Strategy/: CMakeLists.txt  Strategy.cc  Strategy.hpp  StrategyPattern.md
cfg/: config.json
utils/: colors.hpp  common.hpp
